--- a/src/app/center/center.component.html
+++ b/src/app/center/center.component.html
@@ -1,7 +1,11 @@
-<div class="block no-flex">
-  Je suis centré SANS flex !!!!
+<div class="container">
+	<div class="block no-flex">
+		Je suis centré SANS flex !!!!
+	</div>
 </div>
 
-<div class="block flex">
-  Je suis centré AVEC flex !!!!
+<div class="container">
+	<div class="block flex">
+		Je suis centré AVEC flex !!!!
+	</div>
 </div>
