--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,5 +31,17 @@
     <li routerLinkActive="active">
       <a routerLink="media">Média Queries</a>
     </li>
+   
+    <li routerLinkActive="active">
+      <a routerLink="bootstrap">Bootstrap</a>
+    </li>
+
+    <li routerLinkActive="active">
+      <a routerLink="sass">SASS</a>
+    </li>
+    
+    <li routerLinkActive="active">
+      <a routerLink="print">Impression</a>
+    </li>
   </ul>
 </nav>
