--- a/src/app/selector/selector.component.html
+++ b/src/app/selector/selector.component.html
@@ -1,25 +1,67 @@
-<ul>
-	<li>je suis le premier li</li>
-	<li>Sunt expedita sed hic vero? Officiis, ipsum. Impedit, corporis, numquam doloribus earum ullam vitae quo quaerat at culpa neque, dolore quia assumenda similique deserunt ad laudantium blanditiis sed architecto eum?</li>
-	<li>
-    <ul>
-      <li>Je suis un sous li</li>
-      <li>Je suis un sous li</li>
-    </ul>
-  </li>
-	<li>Praesentium placeat iusto rem quis asperiores voluptate velit blanditiis, inventore deserunt ab, autem iste voluptas odio cupiditate hic dolorum totam, eligendi alias. Accusantium aperiam quam assumenda amet asperiores dignissimos officia?</li>
-	<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, repudiandae! Veniam repellendus harum autem deleniti fuga, asperiores quasi accusamus illum temporibus in dicta odit aliquam ipsam dolores doloremque ullam minima?</li>
-</ul>
+<table>
+  <caption>table</caption>
+	<thead>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td>
+				<table>
+          <caption>subtable</caption>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</tbody>
+</table>
 
-
-<div>
-  Je suis au même niveau que ul
-</div>
-
-<form action="">
-  <h5>FORMULAIRE</h5>
-  <input type="number">
-  <input type="text">
-  <input placeholder="Ceci est un place holder modifié">
-  <input type="date">
+<form>
+	<input type="text" placeholder="Text">
+	<input type="number" placeholder="Number">
+	<input type="date" placeholder="Date">
+	<label>
+    <input type="checkbox">
+    <div class="check"></div>
+    Checkbox
+  </label>
 </form>
+
+<div class="spoiler">
+	<button (click)="show = !show">Afficher/cacher</button>
+	<pre *ngIf="show">
+  &lt;div class=&quot;parent&quot;&gt;
+    &lt;h1&gt;Child&lt;/h1&gt;   &lt;!-- h1:first-child, h1:first-of-type --&gt;
+    &lt;div&gt;Child&lt;/div&gt; &lt;!-- div:nth-child(2), div:first-of-type --&gt;
+    &lt;div&gt;Child&lt;/div&gt;
+    &lt;div&gt;Child&lt;/div&gt;
+  &lt;/div&gt;
+</pre>
+</div>
